; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_breaking.c_else_break.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_breaking.c_else_break.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i16*, i16)* @else_break to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @else_break(i16* %0, i16 signext %1) #0 {
  %3 = alloca i16*, align 8
  %4 = alloca i16, align 2
  store i16* %0, i16** %3, align 8
  store i16 %1, i16* %4, align 2
  %5 = load i16*, i16** %3, align 8
  %6 = load i16, i16* %5, align 2
  %7 = sext i16 %6 to i32
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i16, i16* %4, align 2
  %11 = load i16*, i16** %3, align 8
  store i16 %10, i16* %11, align 2
  br label %12

12:                                               ; preds = %9, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
